--- a/model/sass/layout/_header.scss
+++ b/model/sass/layout/_header.scss
@@ -5,4 +5,8 @@ header{
     @extend %grid-center;
     @include grid-template-set ($header);
     padding: 1em;
+
+    & img {
+        max-width: 15em;
+    }
 }
