--- a/model/sass/layout/_footer.scss
+++ b/model/sass/layout/_footer.scss
@@ -1,3 +1,14 @@
 @use '../ultils/mixins';
 @use '../ultils/variables';
 
+footer {
+    font-family: 'Roboto', sans-serif;
+    padding: 1em;
+    background-color: $gris-sombre;
+    color: $txt-fond-sombre;
+
+    & img {
+        max-width: 7em;
+    }
+}
+
