--- a/model/css/index.css
+++ b/model/css/index.css
@@ -78,13 +78,13 @@ th {
   padding: 0;
 }
 
-main .localisation, header {
+main .restaurants, main .fonctionnement, main .presentation, main .localisation, footer, header {
   display: grid;
   align-items: center;
   justify-items: center;
 }
 
-main .localisation, header {
+main .restaurants, main .fonctionnement, main .presentation, main .localisation, footer, header {
   display: grid;
   align-items: center;
   justify-items: center;
@@ -98,13 +98,14 @@ header img {
   max-width: 15em;
 }
 
-main .localisation, header {
+main .restaurants, main .fonctionnement, main .presentation, main .localisation, header, footer {
   display: grid;
   align-items: center;
   justify-items: center;
 }
 
 footer {
+  grid-template-columns: repeat(3, 1fr);
   font-family: "Roboto", sans-serif;
   padding: 1em;
   background-color: #353535;
@@ -137,13 +138,49 @@ main .localisation i {
   padding: 0 0.5em 0 0;
 }
 main .presentation {
+  grid-template-columns: repeat(1, 1fr);
   background-color: #e2e2e2;
 }
+main .presentation h2 {
+  font-size: 1.2em;
+  font-weight: bold;
+  padding: 10px;
+}
+main .presentation p {
+  padding: 10px;
+}
 main .presentation a {
+  background: linear-gradient(360deg, #9356DC, #FF79DA);
   text-decoration: none;
+  color: white;
+  padding: 15px;
+  margin: 15px;
+  border-radius: 60em;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.25);
+}
+main .fonctionnement {
+  grid-template-columns: repeat(3, 1fr);
+}
+main .fonctionnement h1 {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+main .fonctionnement .fonctionnement_number {
+  background: linear-gradient(360deg, #9356DC, #FF79DA);
+  color: white;
+  border-radius: 100px;
+  padding: 10px 10px 10px 10px;
+}
+main .fonctionnement .fonctionnement_text {
+  font-weight: bold;
+  background: #f6f6f6;
+  border-radius: 30px;
+  padding: 35px;
+  margin: 10px;
 }
 main .restaurants {
   background-color: #e2e2e2;
+  grid-template-columns: repeat(4, 1fr);
 }
 main .restaurants a {
   text-decoration: none;
