--- a/model/sass/main.scss
+++ b/model/sass/main.scss
@@ -33,20 +33,64 @@ main {
 
     /* Debut section presentation */
     & .presentation {
+        @extend %grid-center;
+        @include grid-template-set ($presentation);
         background-color:$gris-clair;
+
+        & h2 {
+            font-size: 1.2em;
+            font-weight: bold;
+            padding: 10px;
+        }
+
+        & p {
+            padding: 10px;
+        }
         
         & a {
+            background: linear-gradient(360deg, $violet-primaire, $rose-secondaire);
             text-decoration: none;
+            color: white;
+            padding: 15px;
+            margin: 15px;
+            border-radius: 60em;
+            box-shadow: 2px 4px 5px rgb(0,0,0,0.25);
         }
     }
     /* Fin section presentation */
 
     /* Debut section fonctionnement */
+    & .fonctionnement {
+        @extend %grid-center;
+        @include grid-template-set ($fonctionnement);
+
+        & h1 {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+
+        & .fonctionnement_number {
+            background: linear-gradient(360deg, $violet-primaire, $rose-secondaire);
+            color: white;
+            border-radius: 100px;
+            padding: 10px 10px 10px 10px;;
+        }
+
+        & .fonctionnement_text {
+            font-weight: bold;
+            background: #f6f6f6;
+            border-radius: 30px;
+            padding: 35px;
+            margin: 10px;
+        }
+    }
     /* Fin section fonctionnement */
 
     /* Debut section restaurants */
     & .restaurants {
         background-color:$gris-clair;
+        @extend %grid-center;
+        @include grid-template-set ($restaurants);
 
         & a {
             text-decoration: none;
