--- a/model/sass/ultils/_variables.scss
+++ b/model/sass/ultils/_variables.scss
@@ -17,14 +17,14 @@ $txt-fond-vert: #008766;
 $header: "header";
 $localisation: "localisation";
 $presentation: "presentation";
-$commentCaMarche: "commentCaMarche";
-$lesRestaurants: "lesRestaurants";
+$fonctionnement: "fonctionnement";
+$restaurants: "restaurants";
 $footer: "footer";
 
 //Positionnement
 $grid-columns-header: 1;
 $grid-columns-localisation: 1;
 $grid-columns-presentation: 1;
-$grid-columns-commentCaMarche: 3;
-$grid-columns-lesRestaurants: 4;
+$grid-columns-fonctionnement: 3;
+$grid-columns-restaurants: 4;
 $grid-columns-footer: 3;
