--- a/model/css/index.css
+++ b/model/css/index.css
@@ -118,7 +118,6 @@ footer img {
 /* Début Main */
 main {
   font-family: "Roboto", sans-serif;
-  color: #000000;
   /* Debut section localisation */
   /* Fin section localisation */
   /* Debut section presentation */
@@ -128,14 +127,14 @@ main {
   /* Debut section restaurants */
   /* Fin section restaurants */
 }
+main i {
+  padding: 0 0.5em 0 0;
+}
 main .localisation {
   grid-template-columns: repeat(1, 1fr);
   padding: 1em;
   background: #eaeaea;
   background: linear-gradient(180deg, rgba(173, 173, 173, 0.35) 0%, rgba(234, 234, 234, 0.75) 15%, #eaeaea 100%);
-}
-main .localisation i {
-  padding: 0 0.5em 0 0;
 }
 main .presentation {
   grid-template-columns: repeat(1, 1fr);
@@ -160,6 +159,7 @@ main .presentation a {
 }
 main .fonctionnement {
   grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
 }
 main .fonctionnement h1 {
   font-size: 1.2em;
@@ -168,8 +168,9 @@ main .fonctionnement h1 {
 main .fonctionnement .fonctionnement_number {
   background: linear-gradient(360deg, #9356DC, #FF79DA);
   color: white;
-  border-radius: 100px;
-  padding: 10px 10px 10px 10px;
+  border-radius: 30px;
+  padding: 5px 10px 5px 10px;
+  z-index: 10;
 }
 main .fonctionnement .fonctionnement_text {
   font-weight: bold;
@@ -177,13 +178,36 @@ main .fonctionnement .fonctionnement_text {
   border-radius: 30px;
   padding: 35px;
   margin: 10px;
+  z-index: 1;
 }
 main .restaurants {
   background-color: #e2e2e2;
   grid-template-columns: repeat(4, 1fr);
 }
+main .restaurants h1, main .restaurants h3 {
+  font-size: 1.2em;
+  font-weight: bold;
+}
 main .restaurants a {
   text-decoration: none;
+  color: #000000;
+}
+main .restaurants .palette_du_gout {
+  background: white;
+  border-radius: 30px;
+  margin: 10px;
+  padding: 0px 0px 20px 0px;
+  z-index: 1;
+}
+main .restaurants .palette_du_gout img {
+  border-radius: 20px;
+  z-index: 1;
+}
+main .restaurants .isnew {
+  background: #99E2D0;
+  color: #008766;
+  border-radius: 7px;
+  padding: 5px;
 }
 
 /* Fin Main */
