--- a/model/sass/main.scss
+++ b/model/sass/main.scss
@@ -12,7 +12,10 @@
 /* Début Main */
 main {
     font-family: 'Roboto', sans-serif;
-    color: $txt-fond-clair;
+
+    & i {
+        padding: 0 0.5em 0 0;
+    }
 
     /* Debut section localisation */
     & .localisation {
@@ -25,9 +28,6 @@ main {
              rgba(173,173,173,.35) 0%,
              rgba(234,234,234,.75) 15%,
              rgba(234,234,234,1) 100%); 
-        & i {
-            padding: 0 0.5em 0 0;
-        }
     }
     /* Fin section localisation */
 
@@ -63,6 +63,7 @@ main {
     & .fonctionnement {
         @extend %grid-center;
         @include grid-template-set ($fonctionnement);
+        padding: 20px;
 
         & h1 {
             font-size: 1.2em;
@@ -72,8 +73,9 @@ main {
         & .fonctionnement_number {
             background: linear-gradient(360deg, $violet-primaire, $rose-secondaire);
             color: white;
-            border-radius: 100px;
-            padding: 10px 10px 10px 10px;;
+            border-radius: 30px;
+            padding: 5px 10px 5px 10px;
+            z-index: 10;
         }
 
         & .fonctionnement_text {
@@ -82,6 +84,7 @@ main {
             border-radius: 30px;
             padding: 35px;
             margin: 10px;
+            z-index: 1;
         }
     }
     /* Fin section fonctionnement */
@@ -92,8 +95,34 @@ main {
         @extend %grid-center;
         @include grid-template-set ($restaurants);
 
+        & h1, h3 {
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+
         & a {
             text-decoration: none;
+            color: $txt-fond-clair;;
+        }
+
+        & .palette_du_gout {
+            & img {
+                border-radius: 20px;
+                z-index: 1;
+            }
+            
+            background: white;
+            border-radius: 30px;
+            margin: 10px;
+            padding: 0px 0px 20px 0px;
+            z-index: 1;
+        }
+
+        & .isnew {
+            background: $aqua-tertiaire;
+            color: $txt-fond-vert;
+            border-radius: 7px;
+            padding: 5px;
         }
     }
     /* Fin section restaurants */
