--- a/model/sass/main.scss
+++ b/model/sass/main.scss
@@ -71,11 +71,13 @@ main {
         }
 
         & .fonctionnement_number {
+            position: absolute;
             background: linear-gradient(360deg, $violet-primaire, $rose-secondaire);
             color: white;
             border-radius: 30px;
             padding: 5px 10px 5px 10px;
-            z-index: 10;
+            margin-top: 30px;
+            margin-left: 2px;
         }
 
         & .fonctionnement_text {
@@ -84,7 +86,8 @@ main {
             border-radius: 30px;
             padding: 35px;
             margin: 10px;
-            z-index: 1;
+            margin-left: 15px;
+
         }
     }
     /* Fin section fonctionnement */
@@ -105,17 +108,14 @@ main {
             color: $txt-fond-clair;;
         }
 
-        & .palette_du_gout {
-            & img {
-                border-radius: 20px;
-                z-index: 1;
-            }
-            
+        & img {
+            max-width: 60%;
+            height: auto;
+            border-radius: 20px;
             background: white;
             border-radius: 30px;
             margin: 10px;
-            padding: 0px 0px 20px 0px;
-            z-index: 1;
+            padding: 0px 0px 60px 0px;
         }
 
         & .isnew {
