--- a/model/sass/main.scss
+++ b/model/sass/main.scss
@@ -63,7 +63,8 @@ main {
     & .fonctionnement {
         @extend %grid-center;
         @include grid-template-set ($fonctionnement);
-        padding: 20px;
+        padding: 1em;
+        position: relative;
 
         & h1 {
             font-size: 1.2em;
@@ -87,6 +88,7 @@ main {
             padding: 35px;
             margin: 10px;
             margin-left: 15px;
+            box-shadow: 2px 4px 5px rgb(0,0,0,0.25);
 
         }
     }
@@ -97,6 +99,7 @@ main {
         background-color:$gris-clair;
         @extend %grid-center;
         @include grid-template-set ($restaurants);
+        padding: 1em;
 
         & h1, h3 {
             font-size: 1.2em;
@@ -109,20 +112,48 @@ main {
         }
 
         & img {
-            max-width: 60%;
-            height: auto;
+            position: relative;
+            width: 400px;
+            height: 300px;
             border-radius: 20px;
             background: white;
-            border-radius: 30px;
+            border-radius: 20px;
             margin: 10px;
-            padding: 0px 0px 60px 0px;
+            padding: 0px 0px 80px 0px;
+            box-shadow: 2px 4px 5px rgb(0,0,0,0.25);
         }
+        
+        & .base_restaurants {
 
-        & .isnew {
-            background: $aqua-tertiaire;
-            color: $txt-fond-vert;
-            border-radius: 7px;
-            padding: 5px;
+            & h3, span {
+                position: absolute;
+            }
+
+            & h3 {
+                font-size: 1.05em;
+                margin-top: -75px;
+                margin-left: 25px;
+            }
+
+            & .lieu_restaurant {
+                margin-left: -396px;
+                margin-top: 270px;
+            }
+
+            & .isnew {
+                background: $aqua-tertiaire;
+                color: $txt-fond-vert;
+                border-radius: 5px;
+                padding: 5px;
+                margin-left: -95px;
+                margin-top: 25px;
+            }
+
+            & .like {
+                font-size: 1.5em;
+                margin-left: -75px;
+                margin-top: 255px;
+            }
         }
     }
     /* Fin section restaurants */
