--- a/model/css/index.css
+++ b/model/css/index.css
@@ -1,90 +1,116 @@
 @charset "UTF-8";
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+* {
   margin: 0;
   padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
-}
-
-ul {
-  list-style: none;
-}
-
-button,
-input,
-select {
-  margin: 0;
 }
 
 html {
-  box-sizing: border-box;
+  line-height: 1.15;
+  /* 1 */
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+h1 {
+  font-size: 2em;
 }
 
-img,
-video {
-  height: auto;
-  max-width: 100%;
+ul, ol {
+  list-style: none;
 }
 
-iframe {
-  border: 0;
+.stop {
+  clear: both;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+strong {
+  font-weight: normal;
 }
 
-td,
-th {
-  padding: 0;
+img {
+  border-style: none;
 }
 
-main .restaurants, main .fonctionnement, main .presentation, main .localisation, footer, header {
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+br {
+  margin-bottom: 10px;
+}
+
+.list-item {
+  padding: 1.5em 1em;
+  text-align: left;
+  border-radius: 1em;
+  box-shadow: 0 4px 11px rgba(0, 0, 0, 0.2);
+}
+
+.menuDuResto h3::after {
+  border-bottom: 3px #99E2D0 solid;
+  content: "";
+  display: block;
+  width: 3rem;
+}
+
+.btn {
+  padding: 1em 1.5em;
+  color: #ffffff;
+  transition: 250ms;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+}
+.btn--gradient {
+  background-image: radial-gradient(100% 50% at 20% 10%, #FF79DA 0%, #9356DC 200%);
+}
+.btn--radius {
+  border-radius: 2em;
+}
+.btn:hover {
+  opacity: 0.8;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.btn__like .heart-away, button .heart-away {
+  display: block;
+  transform: scale(1);
+  transition: all 0.5s;
+}
+.btn__like .heart-hover, button .heart-hover {
+  display: block;
+  position: absolute;
+  top: 0;
+  transform: scale(0);
+  transition: all 0.5s;
+  background-color: black;
+  background-image: linear-gradient(0deg, #FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
+
+.btn__like:hover .heart-away, button:hover .heart-away {
+  opacity: 0;
+  transform: scale(0);
+}
+.btn__like:hover .heart-hover, button:hover .heart-hover {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.menuDuResto, main .lesRestaurants, main .commentCaMarche, main .presentation, main .localisation, footer, header {
   display: grid;
   align-items: center;
   justify-items: center;
 }
 
-main .restaurants, main .fonctionnement, main .presentation, main .localisation, footer, header {
+.menuDuResto, main .lesRestaurants, main .commentCaMarche, main .presentation, main .localisation, footer, header {
   display: grid;
   align-items: center;
   justify-items: center;
@@ -96,42 +122,74 @@ header {
 }
 header img {
   max-width: 15em;
+  grid-row: 1 / auto;
+  grid-column: 1 / auto;
+}
+header .btn__retourHome {
+  grid-row: 1 / auto;
+  grid-column: 1 / auto;
+  justify-self: start;
 }
 
-main .restaurants, main .fonctionnement, main .presentation, main .localisation, header, footer {
+/* Fin Header */
+.menuDuResto, main .lesRestaurants, main .commentCaMarche, main .presentation, main .localisation, header, footer {
   display: grid;
   align-items: center;
   justify-items: center;
 }
 
+/* Début Footer */
 footer {
   grid-template-columns: repeat(3, 1fr);
-  font-family: "Roboto", sans-serif;
   padding: 1em;
-  background-color: #353535;
   color: #ffffff;
-}
-footer img {
-  max-width: 7em;
-}
-footer i {
-  padding: 0 0.5em 0 0;
+  background: #353535;
+  font-family: "Roboto", sans-serif;
 }
 
+footer h2 {
+  grid-row: 1 / auto;
+  grid-column: 1 / auto;
+  margin: 0 0 1.5rem 0;
+  font-family: "Shrikhand", cursive;
+  font-size: 1.4em;
+  font-weight: normal;
+  justify-self: start;
+}
+
+footer ul {
+  grid-row: 2 / auto;
+  grid-column: 1 / 4;
+  justify-self: start;
+}
+footer ul li {
+  margin: 0 0 0.5rem 0;
+}
+
+footer a {
+  color: #ffffff;
+}
+footer a .fa-utensils {
+  padding: 0 1rem 0 0;
+}
+footer a .fa-hands-helping {
+  padding: 0 0.55rem 0 0;
+}
+
+/* Fin Footer */
 /* Début Main */
 main {
   font-family: "Roboto", sans-serif;
+  /*Début Page Home*/
   /* Debut section localisation */
   /* Fin section localisation */
   /* Debut section presentation */
   /* Fin section presentation */
   /* Debut section fonctionnement */
   /* Fin section fonctionnement */
-  /* Debut section restaurants */
-  /* Fin section restaurants */
-}
-main i {
-  padding: 0 0.5em 0 0;
+  /* Debut section lesRestaurants */
+  /* Fin section lesRestaurants */
+  /*Fin Page Home*/
 }
 main .localisation {
   grid-template-columns: repeat(1, 1fr);
@@ -139,103 +197,236 @@ main .localisation {
   background: #eaeaea;
   background: linear-gradient(180deg, rgba(173, 173, 173, 0.35) 0%, rgba(234, 234, 234, 0.75) 15%, #eaeaea 100%);
 }
+main .localisation i {
+  padding: 0 0.5em 0 0;
+}
 main .presentation {
   grid-template-columns: repeat(1, 1fr);
-  background-color: #e2e2e2;
+  background-color: #f5f5f5;
+  padding: 2em 0 3em;
+  text-align: center;
 }
 main .presentation h2 {
-  font-size: 1.2em;
-  font-weight: bold;
-  padding: 10px;
+  padding: 0 5em;
 }
 main .presentation p {
-  padding: 10px;
+  padding: 1em 5em 2em;
 }
-main .presentation a {
-  background: linear-gradient(360deg, #9356DC, #FF79DA);
-  text-decoration: none;
-  color: white;
-  padding: 15px;
-  margin: 15px;
-  border-radius: 60em;
-  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.25);
+main .commentCaMarche {
+  grid-template-columns: repeat(1, 1fr);
+  padding: 3em 1em;
 }
-main .fonctionnement {
-  grid-template-columns: repeat(3, 1fr);
-  padding: 1em;
+main .commentCaMarche h2 {
+  grid-row: 1 / auto;
+  grid-column: 1 / 2;
+  justify-self: start;
+}
+main .commentCaMarche ol {
+  grid-row: 2 / auto;
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 2em;
+  margin: 1em 1em 0;
+  justify-self: normal;
+  counter-reset: section;
+}
+main .commentCaMarche li::before {
+  counter-increment: section;
+  content: counter(section);
   position: relative;
+  left: -1.9em;
+  padding: 0.3em 0.6em;
+  border-radius: 70%;
+  background-color: #9356DC;
+  color: #ffffff;
 }
-main .fonctionnement h1 {
-  font-size: 1.2em;
-  font-weight: bold;
+main .commentCaMarche li:hover {
+  background-color: #f2eafb;
 }
-main .fonctionnement .fonctionnement_number {
-  position: absolute;
-  background: linear-gradient(360deg, #9356DC, #FF79DA);
-  color: white;
-  border-radius: 30px;
-  padding: 5px 10px 5px 10px;
-  margin-top: 30px;
-  margin-left: 2px;
+main .commentCaMarche li:hover i {
+  color: #9356DC;
 }
-main .fonctionnement .fonctionnement_text {
-  font-weight: bold;
+main .commentCaMarche p {
+  display: inline-block;
+  position: relative;
+  left: -0.7em;
+}
+main .commentCaMarche i {
+  padding: 0 1em 0 0;
+}
+main .lesRestaurants {
+  grid-template-columns: repeat(1, 1fr);
+  padding: 3em 1em;
   background: #f6f6f6;
-  border-radius: 30px;
-  padding: 35px;
-  margin: 10px;
-  margin-left: 15px;
-  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.25);
 }
-main .restaurants {
-  background-color: #e2e2e2;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 1em;
+main .lesRestaurants h2 {
+  grid-row: 1 / auto;
+  grid-column: 1 / 2;
+  justify-self: start;
 }
-main .restaurants h1, main .restaurants h3 {
-  font-size: 1.2em;
-  font-weight: bold;
+main .lesRestaurants ul {
+  grid-row: 2 / auto;
+  grid-column: 1 / 5;
+  display: grid;
+  grid-template-columns: repeat("lesRestaurants", 1fr);
+  grid-gap: 2em;
+  justify-self: normal;
+  margin: 1em 0;
 }
-main .restaurants a {
-  text-decoration: none;
-  color: #000000;
+main .lesRestaurants li {
+  display: inline-block;
+  width: 100%;
 }
-main .restaurants img {
+main .lesRestaurants a {
+  display: block;
   position: relative;
-  width: 400px;
-  height: 300px;
-  border-radius: 20px;
-  background: white;
-  border-radius: 20px;
-  margin: 10px;
-  padding: 0px 0px 80px 0px;
-  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.25);
+  padding: 0 0 0.7rem 0;
+  color: #000000;
+  border-radius: 1.5em;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
-main .restaurants .base_restaurants h3, main .restaurants .base_restaurants span {
+main .lesRestaurants a .sticker {
   position: absolute;
-}
-main .restaurants .base_restaurants h3 {
-  font-size: 1.05em;
-  margin-top: -75px;
-  margin-left: 25px;
-}
-main .restaurants .base_restaurants .lieu_restaurant {
-  margin-left: -396px;
-  margin-top: 270px;
-}
-main .restaurants .base_restaurants .isnew {
-  background: #99E2D0;
+  right: 1em;
+  top: 1em;
+  padding: 0.4em 0.6em;
   color: #008766;
-  border-radius: 5px;
-  padding: 5px;
-  margin-left: -95px;
-  margin-top: 25px;
+  background: #99e2d0;
+  border-radius: 0.2em;
 }
-main .restaurants .base_restaurants .like {
+main .lesRestaurants a img {
+  padding: 0 0 0.5rem 0;
+  width: 100%;
+  height: 12.5em;
+  object-fit: cover;
+  border-radius: 1.5em 1.5em 0 0;
+}
+main .lesRestaurants a h3, main .lesRestaurants a p {
+  padding: 0 1rem 0.5rem;
+}
+main .lesRestaurants a .btn__like {
+  position: absolute;
+  bottom: 2.5rem;
+  right: 1.5rem;
   font-size: 1.5em;
-  margin-left: -75px;
-  margin-top: 255px;
+  cursor: pointer;
+}
+
+.menuDuResto {
+  grid-template-columns: repeat(1, 1fr);
+  padding: 0 0 3em;
+  justify-items: normal;
+  background: #f6f6f6;
+}
+.menuDuResto__cover {
+  margin: 0 0 -5em 0;
+  width: 100%;
+  height: 20em;
+  object-fit: cover;
+}
+.menuDuResto__carte {
+  padding: 2em 1em 0;
+  background: #f6f6f6;
+  border-radius: 3em 3em 0 0;
+}
+.menuDuResto h2 {
+  grid-row: 1 / auto;
+  grid-column: 1 / 4;
+  justify-self: start;
+  margin: 0 0 1em;
+  font-family: "Shrikhand", cursive;
+  font-size: 2em;
+}
+.menuDuResto h2 button {
+  margin: 0 0 0 2rem;
+  font-size: 1em;
+  position: relative;
+}
+.menuDuResto h3 {
+  grid-row: 2 / auto;
+  grid-column: 1 / 4;
+  justify-self: start;
+  text-transform: uppercase;
+  font-weight: normal;
+}
+.menuDuResto ul {
+  grid-row: 3 / auto;
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1.5em;
+  margin: 1em 0 2.5em;
+  justify-self: normal;
+  counter-reset: section;
+}
+.menuDuResto .list-item {
+  position: relative;
+  padding: 1em;
+  cursor: pointer;
+  overflow: hidden;
+  font-size: 1.05em;
+}
+.menuDuResto h4 {
+  margin: 0 0 0.5rem 0;
+  font-size: 1.1em;
+}
+.menuDuResto p {
+  font-size: 1em;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 85%;
+  overflow: hidden;
+  transition: all 0.5s;
+}
+.menuDuResto strong {
+  position: absolute;
+  right: 2rem;
+  bottom: 1rem;
+  transition: all 0.5s;
+  font-weight: 600;
+}
+.menuDuResto span {
+  position: absolute;
+  top: 0;
+  right: -5rem;
+  width: 5rem;
+  height: 100%;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  background: #99E2D0;
+  transition: all 0.5s;
+}
+.menuDuResto .fa-check-circle {
+  transform: rotate(-240deg);
+  transition: all 0.5s;
+}
+.menuDuResto .list-item:hover p {
+  width: 67%;
+}
+.menuDuResto .list-item:hover strong {
+  right: 6.5rem;
+}
+.menuDuResto .list-item:hover span {
+  right: 0;
+}
+.menuDuResto .list-item:hover span i {
+  transform: rotate(0deg);
+}
+.menuDuResto a {
+  padding: 1em 2.5em;
+  justify-self: center;
 }
 
 /* Fin Main */
 /* media queries */
+@media (max-width: 1270px) {
+  .lesRestaurants ul {
+    grid-row: 2 / auto;
+    grid-column: 1 / 3;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
