--- a/model/sass/main.scss
+++ b/model/sass/main.scss
@@ -13,14 +13,12 @@
 main {
     font-family: 'Roboto', sans-serif;
 
-    & i {
-        padding: 0 0.5em 0 0;
-    }
 
+    /*Début Page Home*/
     /* Debut section localisation */
     & .localisation {
         @extend %grid-center;
-        @include grid-template-set ($header);
+        @include grid-template-set ($localisation);
         padding: 1em;
         background: #eaeaea;
         background: linear-gradient(
@@ -28,6 +26,9 @@ main {
              rgba(173,173,173,.35) 0%,
              rgba(234,234,234,.75) 15%,
              rgba(234,234,234,1) 100%); 
+        & i {
+            padding: 0 0.5em 0 0;
+        }
     }
     /* Fin section localisation */
 
@@ -36,132 +37,265 @@ main {
         @extend %grid-center;
         @include grid-template-set ($presentation);
         background-color:$gris-clair;
+        padding: 2em 0 3em;
+        text-align: center;
 
         & h2 {
-            font-size: 1.2em;
-            font-weight: bold;
-            padding: 10px;
+            padding: 0 5em;
         }
 
         & p {
-            padding: 10px;
+            padding: 1em 5em 2em;
         }
         
-        & a {
-            background: linear-gradient(360deg, $violet-primaire, $rose-secondaire);
-            text-decoration: none;
-            color: white;
-            padding: 15px;
-            margin: 15px;
-            border-radius: 60em;
-            box-shadow: 2px 4px 5px rgb(0,0,0,0.25);
-        }
     }
     /* Fin section presentation */
 
     /* Debut section fonctionnement */
-    & .fonctionnement {
+    .commentCaMarche {
         @extend %grid-center;
-        @include grid-template-set ($fonctionnement);
-        padding: 1em;
-        position: relative;
+        @include grid-template-set (1);
+        padding: 3em 1em;
 
-        & h1 {
-            font-size: 1.2em;
-            font-weight: bold;
+        & h2 {
+            @include grid-pos-set (1, auto, 1, 2);
+            justify-self: start;
         }
-
-        & .fonctionnement_number {
-            position: absolute;
-            background: linear-gradient(360deg, $violet-primaire, $rose-secondaire);
-            color: white;
-            border-radius: 30px;
-            padding: 5px 10px 5px 10px;
-            margin-top: 30px;
-            margin-left: 2px;
+        & ol {
+            @include grid-pos-set (2, auto, 1, 4);
+            display: grid;
+            @include grid-template-set (1);
+            grid-gap: 2em;
+            margin: 1em 1em 0;
+            justify-self: normal;
+            counter-reset: section;
         }
-
-        & .fonctionnement_text {
-            font-weight: bold;
-            background: #f6f6f6;
-            border-radius: 30px;
-            padding: 35px;
-            margin: 10px;
-            margin-left: 15px;
-            box-shadow: 2px 4px 5px rgb(0,0,0,0.25);
-
+        & li::before {
+            counter-increment: section;
+            content: counter(section);
+            position: relative;
+            left: -1.9em;
+            padding: 0.3em 0.6em;
+            border-radius: 70%;
+            background-color: $violet-primaire;
+            color: $txt-fond-sombre;
+        }
+        & li:hover {
+            background-color: lighten($violet-primaire, 35%);
+            & i {
+                color: $violet-primaire;
+            }
+        }
+        & p {
+            display: inline-block;
+            position: relative;
+            left: -0.7em;
+        }
+        & i {
+            padding: 0 1em 0 0;
         }
     }
     /* Fin section fonctionnement */
 
-    /* Debut section restaurants */
-    & .restaurants {
-        background-color:$gris-clair;
+     /* Debut section lesRestaurants */
+     .lesRestaurants {
         @extend %grid-center;
-        @include grid-template-set ($restaurants);
-        padding: 1em;
+        @include grid-template-set (1);
+        padding: 3em 1em;
+        background: #f6f6f6;
 
-        & h1, h3 {
-            font-size: 1.2em;
-            font-weight: bold;
+        & h2 {
+            @include grid-pos-set (1, auto, 1, 2);
+            justify-self: start;
         }
-
+        & ul {
+            @include grid-pos-set (2, auto, 1, 5);
+            display: grid;
+            @include grid-template-set ($lesRestaurants);
+            grid-gap: 2em;
+            justify-self: normal;
+            margin: 1em 0;
+        }
+        & li {
+            display: inline-block;
+            width: 100%;
+        }
         & a {
-            text-decoration: none;
-            color: $txt-fond-clair;;
-        }
-
-        & img {
+            display: block;
             position: relative;
-            width: 400px;
-            height: 300px;
-            border-radius: 20px;
-            background: white;
-            border-radius: 20px;
-            margin: 10px;
-            padding: 0px 0px 80px 0px;
-            box-shadow: 2px 4px 5px rgb(0,0,0,0.25);
-        }
-        
-        & .base_restaurants {
+            padding: 0 0 0.7rem 0;
+            color: $txt-fond-clair;
+            border-radius: 1.5em;
+            box-shadow: 0 3px 10px rgb(0, 0, 0, 0.2);
 
-            & h3, span {
+            & .sticker {
                 position: absolute;
-            }
-
-            & h3 {
-                font-size: 1.05em;
-                margin-top: -75px;
-                margin-left: 25px;
-            }
-
-            & .lieu_restaurant {
-                margin-left: -396px;
-                margin-top: 270px;
-            }
-
-            & .isnew {
-                background: $aqua-tertiaire;
+                right: 1em;
+                top: 1em;
+                padding: 0.4em 0.6em;
                 color: $txt-fond-vert;
-                border-radius: 5px;
-                padding: 5px;
-                margin-left: -95px;
-                margin-top: 25px;
+                background: $vert-clair;
+                border-radius: 0.2em;
             }
-
-            & .like {
+            & img {
+                padding: 0 0 0.5rem 0;
+                width: 100%;
+                height: 12.5em;
+                object-fit: cover;
+                border-radius: 1.5em 1.5em 0 0;
+            }
+            & h3, p {
+                padding: 0 1rem 0.5rem;
+            }
+            & .btn__like {
+                position: absolute;
+                bottom: 2.5rem;
+                right: 1.5rem;
                 font-size: 1.5em;
-                margin-left: -75px;
-                margin-top: 255px;
+                cursor: pointer;
+            }
+        }
+    }  
+    /* Fin section lesRestaurants */
+    /*Fin Page Home*/
+}
+
+.menuDuResto {
+    @extend %grid-center;
+    @include grid-template-set (1);
+    padding: 0 0 3em;
+    justify-items: normal;
+    background: #f6f6f6;
+
+    &__cover {
+        margin: 0 0 -5em 0;
+        width: 100%;
+        height: 20em;
+        object-fit: cover;
+    }
+    &__carte {
+        padding: 2em 1em 0;
+        background: #f6f6f6;
+        border-radius: 3em 3em 0 0;
+    }
+    & h2 {
+        @include grid-pos-set (1, auto, 1, 4);
+        justify-self: start;
+        margin: 0 0 1em;
+        font-family: 'Shrikhand', cursive;
+        font-size: 2em;
+
+        & button {
+            margin: 0 0 0 2rem;
+            font-size: 1em;
+            position: relative;
+        }
+    }
+    & h3 {
+        @include grid-pos-set (2, auto, 1, 4);
+        justify-self: start;
+        @extend %border-length-var;
+        text-transform: uppercase;
+        font-weight: normal;
+    }
+    & ul {
+        @include grid-pos-set (3, auto, 1, 4);
+        display: grid;
+        @include grid-template-set (3);
+        grid-gap: 1.5em;
+        margin: 1em 0 2.5em;
+        justify-self: normal;
+        counter-reset: section;
+    }
+    .list-item {
+        position: relative;
+        padding: 1em;
+        cursor: pointer;
+        overflow: hidden;
+        font-size: 1.05em;
+    }
+    & h4 {
+        margin: 0 0 0.5rem 0;
+        font-size: 1.1em;
+    }
+    & p {
+        font-size: 1em;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 85%; 
+        overflow: hidden;
+        transition: all 0.5s;
+    }
+    & strong {
+        position: absolute;
+        right: 2rem;
+        bottom: 1rem;
+        transition: all 0.5s;
+        font-weight: 600;
+    }
+    & span {
+        position: absolute;
+        top: 0;
+        right: -5rem;
+        width: 5rem;
+        height: 100%;
+        font-size: 1.5em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $txt-fond-sombre;
+        background: $aqua-tertiaire;
+        transition: all 0.5s;
+    }
+    & .fa-check-circle {
+        transform: rotate(-240deg);
+        transition: all 0.5s;
+    }
+
+    // & .list-item {
+    //     animation: showingDishes 1000ms forwards;
+    //     opacity: 0;
+    // //boucle for
+    // }
+    & .list-item:hover {
+        & p {
+            width: 67%;
+        }
+        & strong {
+            right: 6.5rem;
+        }
+        & span {
+            right: 0;
+            & i {
+                transform: rotate(0deg);
             }
         }
     }
-    /* Fin section restaurants */
+    & a {
+        padding: 1em 2.5em;
+        justify-self: center;
+    }
+    
 }
-
+    
 /* Fin Main */
 
 /* media queries */
 @media (max-width: 1270px) {
-    
+    .lesRestaurants ul {
+        @include grid-pos-set (2, auto, 1, 3);
+        @include grid-template-set (2);
+    }
+}
+
+@media (max-width: 960px) {
+
+}
+
+@media (max-width: 680px) {
+
+}
+
+@media (max-width: 480px) {
+
 }
