--- a/model/sass/ultils/_mixins.scss
+++ b/model/sass/ultils/_mixins.scss
@@ -5,6 +5,8 @@
     justify-items: center;
 }
 
+
+
 @mixin grid-template-set($section) {
     @if ($section == "header") {
         $section: $grid-columns-header;
@@ -16,8 +18,16 @@
         $section: $grid-columns-fonctionnement;
     } @else if ($section == "restaurants") {
         $section: $grid-columns-restaurants;
+    } @else if ($section == "page_restaurants") {
+        $section: $grid-columns-page_restaurants;
     } @else if ($section == "footer") {
         $section: $grid-columns-footer;
     }
     grid-template-columns: repeat($section, 1fr);
+}
+
+//Grid position setting
+@mixin grid-pos-set ($row-start, $row-end, $col-start, $col-end) {
+    grid-row: $row-start unquote("/") $row-end;
+    grid-column: $col-start unquote("/") $col-end;
 }
