--- a/model/sass/ultils/_normalizer.scss
+++ b/model/sass/ultils/_normalizer.scss
@@ -1,68 +1,42 @@
-/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
-html,
-body,
-p,
-ol,
-ul,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figure,
-fieldset,
-legend,
-textarea,
-pre,
-iframe,
-hr,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-  padding: 0;
+* {
+  margin:0;
+  padding:0;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: 100%;
-  font-weight: normal;
+
+html {
+  line-height: 1.15; /* 1 */
 }
-ul {
+
+h1 {
+  font-size: 2em;
+}
+
+ul, ol {
   list-style: none;
 }
-button,
-input,
-select {
-  margin: 0;
+
+.stop{
+  clear:both;
 }
-html {
-  box-sizing: border-box;
+
+strong {
+  font-weight:normal;
 }
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+
+img {
+  border-style: none;
 }
-img,
-video {
-  height: auto;
-  max-width: 100%;
+
+a{
+  text-decoration: none;
 }
-iframe {
-  border: 0;
+
+button {
+  cursor: pointer;
+  background: none;
+  border: none;
 }
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-td,
-th {
-  padding: 0;
+
+br{
+ margin-bottom: 10px;
 }
