--- a/model/sass/ultils/_variables.scss
+++ b/model/sass/ultils/_variables.scss
@@ -31,3 +31,7 @@ $grid-columns-presentation: 1;
 $grid-columns-commentCaMarche: 3; 
 $grid-columns-lesRestaurants: 4; 
 $grid-columns-footer: 3;
+
+//Restaurants
+$nb-cartes-resto : 4;
+$nb-resto-dishes-r1 : 9;
