--- a/model/sass/main.scss
+++ b/model/sass/main.scss
@@ -9,14 +9,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 
 
+/* Début Header */
+header {
+    @extend %grid-center;
+    @include grid-template-set ($header);
+    padding: 1em;
+}
+h1 {
+    @include grid-pos-set (1, auto, 1, auto);
+    font-family: 'Shrikhand', cursive;
+}
+.btn__retourHome {
+    @include grid-pos-set (1, auto, 1, auto);
+    justify-self: start;
+}
+/* Fin Header */
+
 /* Début Main */
 main {
     font-family: 'Roboto', sans-serif;
+}
 
-
-    /*Début Page Home*/
     /* Debut section localisation */
-    & .localisation {
+    .localisation {
         @extend %grid-center;
         @include grid-template-set ($localisation);
         padding: 1em;
@@ -33,25 +48,23 @@ main {
     /* Fin section localisation */
 
     /* Debut section presentation */
-    & .presentation {
+    .presentation {
         @extend %grid-center;
         @include grid-template-set ($presentation);
-        background-color:$gris-clair;
         padding: 2em 0 3em;
+        background: #f6f6f6;
         text-align: center;
 
         & h2 {
             padding: 0 5em;
         }
-
         & p {
             padding: 1em 5em 2em;
         }
-        
     }
     /* Fin section presentation */
 
-    /* Debut section fonctionnement */
+    /* Debut section commentCaMarche */
     .commentCaMarche {
         @extend %grid-center;
         @include grid-template-set (1);
@@ -64,7 +77,7 @@ main {
         & ol {
             @include grid-pos-set (2, auto, 1, 4);
             display: grid;
-            @include grid-template-set (1);
+            @include grid-template-set ($commentCaMarche);
             grid-gap: 2em;
             margin: 1em 1em 0;
             justify-self: normal;
@@ -95,10 +108,10 @@ main {
             padding: 0 1em 0 0;
         }
     }
-    /* Fin section fonctionnement */
-
-     /* Debut section lesRestaurants */
-     .lesRestaurants {
+    /* Fin section commentCaMarche */
+    
+    /* Debut section lesRestaurants */
+    .lesRestaurants {
         @extend %grid-center;
         @include grid-template-set (1);
         padding: 3em 1em;
@@ -157,128 +170,180 @@ main {
         }
     }  
     /* Fin section lesRestaurants */
-    /*Fin Page Home*/
-}
 
-.menuDuResto {
-    @extend %grid-center;
-    @include grid-template-set (1);
-    padding: 0 0 3em;
-    justify-items: normal;
-    background: #f6f6f6;
-
-    &__cover {
-        margin: 0 0 -5em 0;
-        width: 100%;
-        height: 20em;
-        object-fit: cover;
-    }
-    &__carte {
-        padding: 2em 1em 0;
+    /* Début section menuDuResto */
+    .menuDuResto {
+        @extend %grid-center;
+        @include grid-template-set (1);
+        padding: 0 0 3em;
+        justify-items: normal;
         background: #f6f6f6;
-        border-radius: 3em 3em 0 0;
-    }
-    & h2 {
-        @include grid-pos-set (1, auto, 1, 4);
-        justify-self: start;
-        margin: 0 0 1em;
-        font-family: 'Shrikhand', cursive;
-        font-size: 2em;
 
-        & button {
-            margin: 0 0 0 2rem;
-            font-size: 1em;
-            position: relative;
+        &__cover {
+            margin: 0 0 -5em 0;
+            width: 100%;
+            height: 20em;
+            object-fit: cover;
         }
-    }
-    & h3 {
-        @include grid-pos-set (2, auto, 1, 4);
-        justify-self: start;
-        @extend %border-length-var;
-        text-transform: uppercase;
-        font-weight: normal;
-    }
-    & ul {
-        @include grid-pos-set (3, auto, 1, 4);
-        display: grid;
-        @include grid-template-set (3);
-        grid-gap: 1.5em;
-        margin: 1em 0 2.5em;
-        justify-self: normal;
-        counter-reset: section;
-    }
-    .list-item {
-        position: relative;
-        padding: 1em;
-        cursor: pointer;
-        overflow: hidden;
-        font-size: 1.05em;
-    }
-    & h4 {
-        margin: 0 0 0.5rem 0;
-        font-size: 1.1em;
-    }
-    & p {
-        font-size: 1em;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 85%; 
-        overflow: hidden;
-        transition: all 0.5s;
-    }
-    & strong {
-        position: absolute;
-        right: 2rem;
-        bottom: 1rem;
-        transition: all 0.5s;
-        font-weight: 600;
-    }
-    & span {
-        position: absolute;
-        top: 0;
-        right: -5rem;
-        width: 5rem;
-        height: 100%;
-        font-size: 1.5em;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: $txt-fond-sombre;
-        background: $aqua-tertiaire;
-        transition: all 0.5s;
-    }
-    & .fa-check-circle {
-        transform: rotate(-240deg);
-        transition: all 0.5s;
-    }
+        &__carte {
+            padding: 2em 1em 0;
+            background: #f6f6f6;
+            border-radius: 3em 3em 0 0;
+        }
+        & h2 {
+            @include grid-pos-set (1, auto, 1, 4);
+            justify-self: start;
+            margin: 0 0 1em;
+            font-family: 'Shrikhand', cursive;
+            font-size: 2em;
 
-    // & .list-item {
-    //     animation: showingDishes 1000ms forwards;
-    //     opacity: 0;
-    // //boucle for
-    // }
-    & .list-item:hover {
-        & p {
-            width: 67%;
-        }
-        & strong {
-            right: 6.5rem;
-        }
-        & span {
-            right: 0;
-            & i {
-                transform: rotate(0deg);
+            & button {
+                margin: 0 0 0 2rem;
+                font-size: 1em;
+                position: relative;
             }
         }
+        & h3 {
+            @include grid-pos-set (2, auto, 1, 4);
+            justify-self: start;
+            @extend %border-length-var;
+            text-transform: uppercase;
+            font-weight: normal;
+        }
+        & ul {
+            @include grid-pos-set (3, auto, 1, 4);
+            display: grid;
+            @include grid-template-set (3);
+            grid-gap: 1.5em;
+            margin: 1em 0 2.5em;
+            justify-self: normal;
+            counter-reset: section;
+        }
+        .list-item {
+            position: relative;
+            padding: 1em;
+            cursor: pointer;
+            overflow: hidden;
+            font-size: 1.05em;
+        }
+        & h4 {
+            margin: 0 0 0.5rem 0;
+            font-size: 1.1em;
+        }
+        & p {
+            font-size: 1em;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 85%; 
+            overflow: hidden;
+            transition: all 0.5s;
+        }
+        & strong {
+            position: absolute;
+            right: 2rem;
+            bottom: 1rem;
+            transition: all 0.5s;
+            font-weight: 600;
+        }
+        & span {
+            position: absolute;
+            top: 0;
+            right: -5rem;
+            width: 5rem;
+            height: 100%;
+            font-size: 1.5em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: $txt-fond-sombre;
+            background: $aqua-tertiaire;
+            transition: all 0.5s;
+        }
+        & .fa-check-circle {
+            transform: rotate(-240deg);
+            transition: all 0.5s;
+        }
+        & .list-item {
+            animation: showingDishes 1000ms forwards;
+            opacity: 0;
+
+            @for $i from 1 to $nb-resto-dishes-r1+1 {
+                &--#{$i} {
+                    animation-delay: calc((1000ms / $nb-resto-dishes-r1) * $i);
+                }
+            }
+
+            @keyframes showingDishes {
+                0% {
+                    transform: translateY(2em);
+
+                }
+                100% {
+                    transform: translateY(0);
+                    opacity: 1;
+                }
+            }
+        }
+
+        & .list-item:hover {
+            & p {
+                width: 67%;
+            }
+            & strong {
+                right: 6.5rem;
+            }
+            & span {
+                right: 0;
+                & i {
+                    transform: rotate(0deg);
+                }
+            }
+        }
+        & a {
+            padding: 1em 2.5em;
+            justify-self: center;
+        }
     }
-    & a {
-        padding: 1em 2.5em;
-        justify-self: center;
-    }
-    
-}
-    
+    /* Fin section menuDuResto */
+
 /* Fin Main */
+
+/* Début Footer */
+footer {
+    @extend %grid-center;
+    @include grid-template-set ($footer);
+    padding: 1em;
+    color: $txt-fond-sombre;
+    background: #353535;
+    font-family: 'Roboto', sans-serif;
+}
+footer h2 {
+    @include grid-pos-set (1, auto, 1, auto);
+    margin: 0 0 1.5rem 0;
+    font-family: 'Shrikhand', cursive;
+    font-size: 1.4em;
+    font-weight: normal;
+    justify-self: start;
+}
+footer ul {
+    @include grid-pos-set (2, auto, 1, 4);
+    justify-self: start;
+    & li {
+        margin: 0 0 0.5rem 0;
+    }
+}
+footer a {
+    color: $txt-fond-sombre;
+    & .fa-utensils {
+        padding: 0 1rem 0 0;
+    }
+    & .fa-hands-helping {
+        padding: 0 0.55rem 0 0;
+    }
+}
+
+/* Fin Footer */
+
 
 /* media queries */
 @media (max-width: 1270px) {
@@ -286,15 +351,54 @@ main {
         @include grid-pos-set (2, auto, 1, 3);
         @include grid-template-set (2);
     }
+    .menuDuResto ul {
+        @include grid-pos-set (3, auto, 1, 3);
+        @include grid-template-set (2);
+    }
 }
 
 @media (max-width: 960px) {
-
+    .commentCaMarche ol {
+        @include grid-pos-set (2, auto, 1, 2);
+        @include grid-template-set (1);
+    }
+    .menuDuResto ul {
+        @include grid-pos-set (3, auto, 1, 3);
+        @include grid-template-set (1);
+    }
 }
 
 @media (max-width: 680px) {
-
+    .commentCaMarche ol {
+        @include grid-pos-set (2, auto, 1, 2);
+        @include grid-template-set (1);
+    }
+    .fa-mobile-alt:before {
+        padding: 0 0.7em 0 0;
+    }
+    .fa-list-ul:before {
+        padding: 0 0.3em 0 0;
+    }
+    .lesRestaurants ul {
+        @include grid-pos-set (2, auto, 1, 2);
+        @include grid-template-set (1);
+    }
 }
 
 @media (max-width: 480px) {
+    .presentation h2 {
+        padding: 0 2em;
+    }
+    .presentation p {
+        padding: 1em 2em 2em;
+    }
+    .menuDuResto h2 {
+        font-size: 1.7em;
+    }
+    .menuDuResto .list-item {
+        font-size: 0.8em;
+    }
+    .menuDuResto .list-item:hover p {
+        width: 60%;
+    }
 }
